# stellar-txwatch-contracts

./: .env.example  .gitignore  CHANGELOG.md  CLIPPY_PEDANTIC_FIXES.md  CLIPPY_WARNINGS_FIXES.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENTS.md  Makefile  README.md  SECURITY.md  task1.md  task2.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-testnet.yml  publish-abis.yml  publish-bindings.yml  wasm-size-check.yml
bindings/alert-registry/: .npmignore  README.md  package.json  tsconfig.json
bindings/watcher-registry/: .npmignore  README.md  package.json
contracts/alert-registry/: Cargo.toml  README.md
contracts/alert-registry/src/: contract.rs  lib.rs  storage.rs  tests.rs  types.rs
contracts/alert-registry/test_snapshots/tests/: test_get_alert_count.1.json  test_index_queries.1.json  test_register_and_get_alert.1.json  test_remove_alert.1.json  test_update_alert.1.json  test_update_unauthorized.1.json  test_update_webhook.1.json  test_update_webhook_unauthorized.1.json
contracts/integration-tests/: Cargo.toml
contracts/integration-tests/tests/: cross_contract.rs
contracts/test-utils/: Cargo.toml
contracts/watcher-registry/: Cargo.toml  README.md  build.rs
docs/: alert-registry.md  contributing-contracts.md  ecosystem-submission.md  events.md  pr-get-alerts-by-owner-paginated.md  pr-remove-watcher-not-registered.md  storage.md  testing.md  threat-model.md  ttl.md  watcher-registry.md
scripts/: deploy.sh  test.sh  upgrade.sh  verify.sh
(+10 files in other folders)
